--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
+    "classnames": "^2.3.1",
+    "https": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.0",
     "react-scripts": "5.0.1",
     "sass": "^1.54.3",
     "typescript": "^4.7.4",
