finish login and register

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,5 +34,6 @@
     /* src */
     "components/*": [ "src/components/*" ],
     "compositions/*": [ "src/compositions/*" ],
+    "helpers": [ "src/helpers" ],
   }
 }
